Edited wiki page through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,1 +1,43 @@
 #summary Installation instructions
+
+= Installing Google Chart PHP Library =
+
+== Installing from an archive ==
+
+This is the simplest, and the recommended way for the majority of cases. However, if you want to try bleeding edge features or if you might want to try out [Installation#SVN_installation SVN installation]
+
+  * Download the last stable version in the [http://code.google.com/p/googlechartphplib/downloads/list Downloads section].
+  * Extract the archive
+  * Copy the content of `lib` folder inside your project. For example, you can create a directory `googlechartlibphp` and copy all the files from the `lib` folder inside it.
+
+=== Autoloading ===
+
+The library is compatible with autoloading features provided by popular frameworks such à Symfony or Zend Framework, as it doesn't override the autoload function.
+
+If you don't use autoloading, you'll have to manually `require` class files prior usage.
+
+== Installing from SVN ==
+
+You can use the `svn:externals` property to automatically fetch the last revision inside a directory of your project.
+
+For example, if your include folder is `lib`, do:
+
+{{{
+$ svn pe svn:externals lib
+}}}
+
+Then specify a folder name, for example `googlechartphplib` and the URL of the repository. Read more about [http://svnbook.red-bean.com/en/1.0/ch07s03.html externals definitions in the SVN Book].
+
+Note: On Windows, you can use the excellent client [http://tortoisesvn.net/downloads TortoiseSVN] to avoid using command line.
+
+If you want to tie your project to a specific release, use a the URL of a branche. Example:
+
+{{{
+http://googlechartphplib.googlecode.com/svn/branches/0.4
+}}}
+
+You can also synchronize with the trunk with the URL:
+
+{{{
+http://googlechartphplib.googlecode.com/svn/trunk
+}}}
