--- a/wiki/Links.wiki
+++ b/wiki/Links.wiki
@@ -16,8 +16,11 @@ http://timshadel.com/2007/12/17/using-googles-chart-api-to-create-sparklines/
 http://james.cridland.net/code/google-chart.html
 
 GoogChart by Ludwig Pettersson
+
 http://luddep.se/notebook/2008/04/13/charts-php-and-google-charts-api/
 http://code.google.com/p/googchart/
 
 
+Wordpress plugin
 
+http://www.rarst.net/script/google-chart/
