Edited wiki page QRCodes through web user interface.

--- a/wiki/QRCodes.wiki
+++ b/wiki/QRCodes.wiki
@@ -2,6 +2,8 @@
 
 = Example =
 
+http://chart.apis.google.com/chart?cht=qr&chs=150x150&chl=Hello+world&nonsense=foo.png
+
 {{{
 <?php
 require 'lib/GoogleQRCode.php';
@@ -13,5 +15,8 @@ $chart->setData('Hello world');
 header('Content-Type: image/png');
 echo $chart;
 }}}
+
+
+= API Documentation =
 
 See http://code.google.com/apis/chart/docs/gallery/qr_codes.html
